--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-ok
+<!doctype html>
+<head>
+  <title>UNBLOCKED GAMES</title>
+</head>
+</body>
+<center>
+<b>
+<p5>
+  UNBLOCKED GAMES
+</p5>
+</b>
+</center>
+<center>
+<button onclick="location.href = '';" id="myButton" class="float-left submit-button" >Hit the target</button>
