--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 </b>
 </center>
 <center>
-<button onclick="location.href = '';" id="myButton" class="float-left submit-button" >Hit the target</button>
+<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
+<button onclick="location.href = '';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
