--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!doctype html>
 <head>
-  <title>UNBLOCKED GAMES</title>
+  <title>Canvas - Dashboard</title>
+  <style>
+    body {
+      background-color: #000000;
+    }
+    p {
+      background-color: #030303;
+      color: white;
+      font-size: 30px;
+      padding: 30px;
+    }
+  </style>
 </head>
-</body>
+<body>
 <center>
 <b>
-<p5>
   UNBLOCKED GAMES
-</p5>
 </b>
-</center>
 <center>
+</center>
 <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
 <button onclick="location.href = '';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
+ </body>
