--- a/get-the-coin.html
+++ b/get-the-coin.html
@@ -1,1 +1,1 @@
-<iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@fightingox1/ok#main.pylite=true&outputonly=true"></iframe>
+<iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@fightingox1/ok#main.py?embed=true"></iframe>
