--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
 <center>
 </center>
 <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
-<button onclick="location.href = '';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
+<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
  </body>
