--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@
 </center>
 <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
 <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
- </body>
+ <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
+</body>
