--- a/snake-game.html
+++ b/snake-game.html
@@ -20,6 +20,9 @@
   </style>
 </head>
 <body>
+<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button>
+</body>
+
 <canvas width="400" height="400" id="game"></canvas>
 <script>
 var canvas = document.getElementById('game');
