--- a/hit-the-target.html
+++ b/hit-the-target.html
@@ -64,6 +64,7 @@ tr:nth-child(odd){background-color: #0f0f0f}
     </style>
 </head>
 <body>
+<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button>
 <div id="gameover"hidden="true">
     <b style="color: red;font-size: 60px;">Game Over</b>
     <p style="color: white;font-size: 40px;">(you suck)</p>
