--- a/get-the-coin.html
+++ b/get-the-coin.html
@@ -1,1 +1,12 @@
+<!doctype html>
+<html>
+<head>
+<title>
+Get the coin
+</title>
+</head>
+<body>
+<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button>
 <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@fightingox1/ok#main.py?embed=true"></iframe>
+</body>
+</html>
