--- a/hit-the-target.html
+++ b/hit-the-target.html
@@ -68,6 +68,7 @@ tr:nth-child(odd){background-color: #0f0f0f}
 <div id="gameover"hidden="true">
     <b style="color: red;font-size: 60px;">Game Over</b>
     <p style="color: white;font-size: 40px;">(you suck)</p>
+    <button onClick="window.location.reload();">Respawn</button>
 </div>
 <div id="hud" style="position:absolute;left:10%;top:10%;">
     <p id="average"></p>
