--- a/hit-the-target.html
+++ b/hit-the-target.html
@@ -83,8 +83,8 @@ tr:nth-child(odd){background-color: #0f0f0f}
         <p id="targetnum">50 Targets</p>
         <input type="range" id="targetslider" min="1"></input>
     <p id="max_rects">Max Obstacles: 15</p>
-    <input type="range" id="speedslider" min="1" max="40" value="15"></input>
-    <p id="max_rects">Max Speed: 15</p>
+        <input type="range" id="speedslider" min="1" max="40" value="15"></input>
+    <p id="max_speed">Max Speed: 15</p>
     <input type="range" id="rectslider" min="1" max="40" value="15"></input>
     <p>Target Color</p>
     <input type="color" id="targetcolor" value="#0000FF" style="margin: 0;padding:0;border: none;"></input>
@@ -125,7 +125,7 @@ var cx = Math.random()*canvas.width;
 var cy = Math.random()*canvas.height;
 var vx = 0;var vy = 0;
 var moving=true;
-var speed=speedslider;
+var speed=maxspeed;
 var px;var py;
 var a_time = 0;var time = 0;
 var obstacles = [];
@@ -271,6 +271,7 @@ document.getElementById("play").addEventListener("click", function(){
     maxtargets = document.getElementById("targetslider").value;
     targetcolor = document.getElementById("targetcolor").value;
     maxrects = document.getElementById("rectslider").value;
+    maxspeed = document.getElementById("speedslider").value;
     if(maxtargets==100){maxtargets=Infinity}
     document.getElementById("container").hidden=true;
     game1 = setInterval(game,20);
@@ -283,6 +284,7 @@ document.getElementById("targetslider").addEventListener('change', function(){
 });
 document.getElementById("rectslider").addEventListener('change', function(){
     document.getElementById("max_rects").textContent="Max Obstacles: "+document.getElementById("rectslider").value;
+    document.getElementById("max_speed").textContent="Max Speed: "+document.getElementById("speedslider").value;
 });
 document.addEventListener('click', function(e){clicking=true});
 </script>
