--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+  <link rel="icon" href="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
   <title>Canvas - Dashboard</title>
   <style>
     body {
@@ -16,9 +17,11 @@
 <body>
 <center>
 <img src="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
+<p7>
 <b>
   UNBLOCKED GAMES
 </b>
+</p7>
 <center>
 </center>
 <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
