--- a/index.html
+++ b/index.html
@@ -12,19 +12,37 @@
       font-size: 30px;
       padding: 30px;
     }
+    game_button{
+      height: auto;
+      width: auto;
+      padding: 20px;
+    }
+    logo{
+      top: 20px
   </style>
 </head>
 <body>
+<div>
 <center>
-<img src="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
 <p7>
 <b>
   UNBLOCKED GAMES
 </b>
 </p7>
-<center>
 </center>
+</div>
+<div class=logo>
+<center>
+<img src="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
+</center>
+</div>
+<center>
+<div class = game_button>
 <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
+</div class = game_button>
 <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
- <button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="float-left submit-button" >Snake Game</button>
+</div>
+<div class = game_button>
+<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="float-left submit-button" >Snake Game</button>
+</div>
 </body>
