--- a/index.html
+++ b/index.html
@@ -18,22 +18,27 @@
       padding: 20px;
     }
     logo{
-      top: 20px
+      padding:50px;
+    }
+    header{
+      padding: 80px;
+      font-size: 150px;
   </style>
 </head>
 <body>
-<div>
+
+<div class=logo>
+<center>
+<img src="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
+</center>
+</div>
+<div class = header>
 <center>
 <p7>
 <b>
   UNBLOCKED GAMES
 </b>
 </p7>
-</center>
-</div>
-<div class=logo>
-<center>
-<img src="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
 </center>
 </div>
 <center>
