--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       height: auto;
       width: auto;
       padding: 20px;
+      background-color: #4CAF50; /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
     }
     logo{
       top:500px;
@@ -24,22 +32,21 @@
     header{
       padding: 80px;
       font-size: 150px;
+      font-family: Arial, Helvetica, sans-serif;
   </style>
 </head>
 <body>
 
+<div class = header>
+<center>
+<p>
+  UNBLOCKED GAMES
+</p>
+</center>
+</div>
 <div class=logo>
 <center>
 <img src="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
-</center>
-</div>
-<div class = header>
-<center>
-<p7>
-<b>
-  UNBLOCKED GAMES
-</b>
-</p7>
 </center>
 </div>
 <center>
