--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       display: inline-block;
       font-size: 16px;
     }
+    
+    button_div{
+    padding:20px;  
+    }
+    
     logo{
       top:500px;
       padding:50px;
@@ -29,15 +34,16 @@
     header{
       font-size: 150px;
       font-family: Arial, Helvetica, sans-serif;
+      color: #D3D3D3;
   </style>
 </head>
 <body>
 
-<div class = header>
+<div class>
 <center>
-<p>
+<header>
   UNBLOCKED GAMES
-</p>
+</header>
 </center>
 </div>
 <div class=logo>
@@ -46,12 +52,12 @@
 </center>
 </div>
 <center>
-<div class = game_button>
-<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
-</div class = game_button>
-<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
+<div class = button_div>
+<button class = game_button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
+</div class = button_div>
+<button class = game_button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
 </div>
-<div class = game_button>
-<button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="float-left submit-button" >Snake Game</button>
+<div class = button_div>
+<button class = game_button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="float-left submit-button" >Snake Game</button>
 </div>
 </body>
