--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       padding:50px;
     }
     header{
-      font-size: 150px;
+      font-size: 70px;
       font-family: Arial, Helvetica, sans-serif;
       color: #D3D3D3;
   </style>
@@ -53,11 +53,11 @@
 </div>
 <center>
 <div class = button_div>
-<button class = game_button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="float-left submit-button" >Hit the target</button>
+<button class="game_button" onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton">Hit the target</button>
 </div class = button_div>
-<button class = game_button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="float-left submit-button" >Collect The Coins (work in progress)</button>
+<button class="game_button" onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton">Collect The Coins (work in progress)</button>
 </div>
 <div class = button_div>
-<button class = game_button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="float-left submit-button" >Snake Game</button>
+<button class="game_button" onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton">Snake Game</button>
 </div>
 </body>
