--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 </div>
 <center>
 <div class = button_div>
-<button class="game_button" onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton">Hit the target</button>
+<a href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>
 </div class = button_div>
-<button class="game_button" onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton">Collect The Coins (work in progress)</button>
+<a href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="game_button">Collect The Coins (work in progress)</a>
 </div>
 <div class = button_div>
-<button class="game_button" onclick="location.href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton">Snake Game</button>
+<a href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="game_button">Snake Game</a>
 </div>
 </body>
