--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <link rel="icon" href="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
   <title>Canvas - Dashboard</title>
   <style>
-    body {
+    .body {
       background-color: #000000;
     }
-    b {
+    .b {
       background-color: #030303;
       color: white;
       font-size: 30px;
       padding: 30px;
     }
-    game_button{
+    .game_button{
       background-color: #4CAF50; /* Green */
       border: none;
       color: white;
@@ -23,7 +23,7 @@
       font-size: 16px;
     }
     
-    button_div{
+    .button_div{
     padding:20px;  
     }
     
@@ -31,7 +31,7 @@
       top:500px;
       padding:50px;
     }
-    header{
+    .header{
       font-size: 70px;
       font-family: Arial, Helvetica, sans-serif;
       color: #D3D3D3;
