--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="icon" href="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
   <title>Canvas - Dashboard</title>
   <style>
-    .body {
+    body {
       background-color: #000000;
     }
     .b {
@@ -13,7 +13,7 @@
       padding: 30px;
     }
     .game_button{
-      background-color: #4CAF50; /* Green */
+      background-color: #D3D3D3;
       border: none;
       color: white;
       padding: 15px 32px;
