--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       padding: 30px;
     }
     .game_button{
-      background-color: #D3D3D3;
+      background-color: #808080;
       border: none;
       color: white;
       padding: 15px 32px;
