--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       top:500px;
       padding:50px;
     }
-    .header{
+    header{
       font-size: 70px;
       font-family: Arial, Helvetica, sans-serif;
-      color: #D3D3D3;
+      color: #808080;
   </style>
 </head>
 <body>
