--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
 </div class = button_div>
 <a href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="game_button">Collect The Coins (work in progress)</a>
 </div>
+</div class = button_div>
+<a href = 'https://fightingox1.github.io/Amazing-Math/2048/2048-master/index.html';" id="myButton" class="game_button">2048</a>
+</div>
+</div class = button_div>
+<a href = 'https://fightingox1.github.io/Amazing-Math/clumsy-bird/index.html';" id="myButton" class="game_button">clumsy bird</a>
+</div>
+</div class = button_div>
+<a href = 'https://fightingox1.github.io/Amazing-Math/canvas-tetris-master/canvas-tetris-master/index.html';" id="myButton" class="game_button">tetris</a>
+</div>
+</div class = button_div>
+<a href = 'Amazing-Math/hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">hextris</a>
+</div>
+</div class = button_div>
+<a href = 'https://fightingox1.github.io/Amazing-Math/javascript-racer-master/javascript-racer-master/index.html';" id="myButton" class="game_button">javascript racer</a>
+</div>
 <div class = button_div>
 <a href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="game_button">Snake Game</a>
 </div>
