--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <a href = 'https://fightingox1.github.io/Amazing-Math/canvas-tetris-master/canvas-tetris-master/index.html';" id="myButton" class="game_button">tetris</a>
 </div>
 </div class = button_div>
-<a href = 'Amazing-Math/hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">hextris</a>
+<a href = 'https://fightingox1.github.io/Amazing-Math/hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">hextris</a>
 </div>
 </div class = button_div>
 <a href = 'https://fightingox1.github.io/Amazing-Math/javascript-racer-master/javascript-racer-master/index.html';" id="myButton" class="game_button">javascript racer</a>
