--- a/canvas-tetris-master/canvas-tetris-master/index.html
+++ b/canvas-tetris-master/canvas-tetris-master/index.html
@@ -5,6 +5,7 @@
         <link rel='stylesheet' href='style.css' />
     </head>
     <body>
+        <center><button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button></center>
         <audio id="clearsound" src="sound/pop.ogg" preload="auto"></audio>
         <canvas width='300' height='600'></canvas>
         <button id="playbutton" onclick="playButtonClicked();">Play</button>
