--- a/clumsy-bird/index.html
+++ b/clumsy-bird/index.html
@@ -33,6 +33,7 @@
     </head>
 
     <body>
+        <center><button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button></center>
         <!-- Canvas placeholder -->
         <div id="screen"></div>
 
