--- a/hextris-gh-pages/hextris-gh-pages/index.html
+++ b/hextris-gh-pages/hextris-gh-pages/index.html
@@ -60,6 +60,7 @@
 		<script data-ad-client="ca-pub-9107422120987163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
+		<center><button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button></center>
 		<canvas id="canvas"></canvas>
 		<div id="overlay" class="faded overlay"></div>
 		<div id='startBtn' ></div>
