--- a/javascript-racer-master/javascript-racer-master/index.html
+++ b/javascript-racer-master/javascript-racer-master/index.html
@@ -6,6 +6,7 @@
 </head> 
 
 <body> 
+  <center><button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button></center>
 
   <ul>
     <li><a href='v1.straight.html'>Version 1 - Straight</a></li>
