--- a/javascript-racer-master/javascript-racer-master/v3.hills.html
+++ b/javascript-racer-master/javascript-racer-master/v3.hills.html
@@ -8,7 +8,7 @@
 </head> 
 
 <body> 
-
+<center><button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button></center>
   <table id="controls">
     <tr>
       <td colspan="2">
