--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <center>
 <div class = button_div>
 <a href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>
+</div>
 <div class = button_div>
 <a href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="game_button">Collect The Coins (work in progress)</a>
 </div>
