--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <link rel="icon" href="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
+  <link rel="icon" href="BasicLogo.png">
   <title>Canvas - Dashboard</title>
   <style>
     body {
@@ -44,7 +44,7 @@
   
 <div class=logo>
 <center>
-<img src="https://fightingox1.github.io/Amazing-Math/BasicLogo.png">
+<img src="BasicLogo.png">
 </center>
 </div>
   
@@ -55,20 +55,20 @@
 </div>
 <center>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>
+<a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/get-the-coin.html';" id="myButton" class="game_button">Collect The Coins (work in progress)</a>
+<a href = 'get-the-coin.html';" id="myButton" class="game_button">Collect The Coins (work in progress)</a>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/2048/2048-master/index.html';" id="myButton" class="game_button">2048</a>
+<a href = '2048/2048-master/index.html';" id="myButton" class="game_button">2048</a>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/clumsy-bird/index.html';" id="myButton" class="game_button">clumsy bird</a>
+<a href = 'clumsy-bird/index.html';" id="myButton" class="game_button">clumsy bird</a>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/canvas-tetris-master/canvas-tetris-master/index.html';" id="myButton" class="game_button">tetris</a>
+<a href = 'canvas-tetris-master/canvas-tetris-master/index.html';" id="myButton" class="game_button">tetris</a>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">hextris</a>
+<a href = 'hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">hextris</a>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/javascript-racer-master/javascript-racer-master/index.html';" id="myButton" class="game_button">javascript racer</a>
+<a href = 'javascript-racer-master/javascript-racer-master/index.html';" id="myButton" class="game_button">javascript racer</a>
 <div class = button_div>
-<a href = 'https://fightingox1.github.io/Amazing-Math/snake-game.html';" id="myButton" class="game_button">Snake Game</a>
+<a href = 'snake-game.html';" id="myButton" class="game_button">Snake Game</a>
 </div>
 </body>
