--- a/snake-game.html
+++ b/snake-game.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="./Global.css">
 </head>
 <body>
-<button onclick="location.href = '../index.html';" id="myButton" class="float-left submit-button" >Home</button>
+<button onclick="location.href = 'index.html';" id="myButton" class="float-left submit-button" >Home</button>
 </body>
 
 <canvas width="400" height="400" id="game"></canvas>
