--- a/snake-game.html
+++ b/snake-game.html
@@ -18,7 +18,7 @@
     border: 1px solid white;
   }
   </style>
-  <link rel="stylesheet" href="./Global.css">
+  <link rel="stylesheet" href="Global.css">
 </head>
 <body>
 <button onclick="location.href = 'index.html';" id="myButton" class="float-left submit-button" >Home</button>
