--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       background-color: #808080;
       border: none;
       color: white;
-      padding: 15px 32px;
+      padding: 15px 15px;
       text-align: center;
       text-decoration: none;
       display: inline-block;
       font-size: 16px;
+      width: 100%;
     }
     
     .button_div{
