--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      font-size: 16px;
+      font-size: 20px;
       width: 100%;
     }
     
@@ -57,19 +57,21 @@
 <center>
 <div class = button_div>
 <a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>
+</div>
 <div class = button_div>
 <a href = 'get-the-coin.html';" id="myButton" class="game_button">Collect The Coins (work in progress)</a>
+</div>
 <div class = button_div>
 <a href = '2048/2048-master/index.html';" id="myButton" class="game_button">2048</a>
 <div class = button_div>
-<a href = 'clumsy-bird/index.html';" id="myButton" class="game_button">clumsy bird</a>
+<a href = 'clumsy-bird/index.html';" id="myButton" class="game_button">Clumsy bird (Flappy Bird)</a>
 <div class = button_div>
-<a href = 'canvas-tetris-master/canvas-tetris-master/index.html';" id="myButton" class="game_button">tetris</a>
+<a href = 'canvas-tetris-master/canvas-tetris-master/index.html';" id="myButton" class="game_button">Bad Tetris Clone</a>
 <div class = button_div>
-<a href = 'hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">hextris</a>
+<a href = 'hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">Hextris (This is supprisingly fun)</a>
 <div class = button_div>
-<a href = 'javascript-racer-master/javascript-racer-master/index.html';" id="myButton" class="game_button">javascript racer</a>
+<a href = 'javascript-racer-master/javascript-racer-master/index.html';" id="myButton" class="game_button">Car Racing Game go brrrrrr</a>
 <div class = button_div>
-<a href = 'snake-game.html';" id="myButton" class="game_button">Snake Game</a>
+<a href = 'snake-game.html';" id="myButton" class="game_button">HTML Snake (Just in case google snake gets blocked)</a>
 </div>
 </body>
