--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
       background-color: #808080;
       border: none;
       color: white;
-      padding: 15px 15px;
+      padding: 15px;
       text-align: center;
+      float: center;
       text-decoration: none;
       display: inline-block;
       font-size: 20px;
-      width: 100%;
+      width: 95%;
     }
     
     .button_div{
