--- a/index.html
+++ b/index.html
@@ -64,14 +64,19 @@
 </div>
 <div class = button_div>
 <a href = '2048/2048-master/index.html';" id="myButton" class="game_button">2048</a>
+</div>
 <div class = button_div>
 <a href = 'clumsy-bird/index.html';" id="myButton" class="game_button">Clumsy bird (Flappy Bird)</a>
+</div>
 <div class = button_div>
 <a href = 'canvas-tetris-master/canvas-tetris-master/index.html';" id="myButton" class="game_button">Bad Tetris Clone</a>
+</div>
 <div class = button_div>
 <a href = 'hextris-gh-pages/hextris-gh-pages/index.html';" id="myButton" class="game_button">Hextris (This is supprisingly fun)</a>
+</div>
 <div class = button_div>
 <a href = 'javascript-racer-master/javascript-racer-master/index.html';" id="myButton" class="game_button">Car Racing Game go brrrrrr</a>
+</div>
 <div class = button_div>
 <a href = 'snake-game.html';" id="myButton" class="game_button">HTML Snake (Just in case google snake gets blocked)</a>
 </div>
