--- a/canvas-tetris-master/canvas-tetris-master/index.html
+++ b/canvas-tetris-master/canvas-tetris-master/index.html
@@ -3,10 +3,10 @@
     <head>
         <title>HTML5 Tetris</title>
         <link rel='stylesheet' href='style.css' />
-        <link rel="stylesheet" href="../Global.css">
+        <link rel="stylesheet" href="../../Global.css">
     </head>
     <body>
-        <center><button onclick="location.href = '../index.html';" id="myButton" class="float-left submit-button" >Home</button></center>
+        <center><button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button" >Home</button></center>
         <audio id="clearsound" src="sound/pop.ogg" preload="auto"></audio>
         <canvas width='300' height='600'></canvas>
         <button id="playbutton" onclick="playButtonClicked();">Play</button>
