--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 </div>
 <center>
 <div class = button_div>
-<a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>                                                                
+<a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>
+                                                                   
+<p><Hello/p>                                                                
+                                                                   
 </div>
 <div class = button_div>
 <a href = 'get-the-coin.html';" id="myButton" class="game_button">Collect The Coins (work in progress)</a>
