--- a/javascript-racer-master/javascript-racer-master/index.html
+++ b/javascript-racer-master/javascript-racer-master/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Javascript Racer</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link rel="stylesheet" href="Global.css">
+  <link rel="stylesheet" href="../../Global.css">
 </head> 
 
 <body> 
