--- a/javascript-racer-master/javascript-racer-master/v3.hills.html
+++ b/javascript-racer-master/javascript-racer-master/v3.hills.html
@@ -5,10 +5,11 @@
   <title>Javascript Racer - v3 (hills)</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="common.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="Global.css">
 </head> 
 
 <body> 
-<center><button onclick="location.href = 'https://fightingox1.github.io/Amazing-Math';" id="myButton" class="float-left submit-button" >Home</button></center>
+<center><button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button" >Home</button></center>
   <table id="controls">
     <tr>
       <td colspan="2">
