--- a/javascript-racer-master/javascript-racer-master/v3.hills.html
+++ b/javascript-racer-master/javascript-racer-master/v3.hills.html
@@ -5,7 +5,7 @@
   <title>Javascript Racer - v3 (hills)</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="common.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="Global.css">
+  <link rel="stylesheet" href="../../Global.css">
 </head> 
 
 <body> 
