--- a/index.html
+++ b/index.html
@@ -98,4 +98,7 @@
 <div class = button_div>
 <a href = 'snake-game.html';" id="myButton" class="game_button">HTML Snake (Just in case google snake gets blocked)</a>
 </div>
+<div class = button_div>
+<a href = 'cookie-clicker.html';" id="myButton" class="game_button">Cookie Clicker</a>
+</div>
 </body>
