--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 </center>
 </div>
 <center>
+  
+<div class = button_div>
+<input type="button" value="Test Game" id="myButton" class="game_button" onclick="msg()">                                                                                                                                                                           
+</div>  
+  
 <div class = button_div>
 <a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>                                                                                                                                                                                 
 </div>
