--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       font-family: Arial, Helvetica, sans-serif;
       color: #808080;
   </style>
+  
+  
 </head>
 <body>
 
@@ -76,7 +78,7 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="Test Game" id="myButton" class="game_button" onclick="msg()">                                                                                                                                                                           
+<input type="button" value="New UI Test" id="myButton" class="game_button" onclick="msg()">                                                                                                                                                                           
 </div>  
   
 <div class = button_div>
@@ -106,4 +108,9 @@
 <div class = button_div>
 <a href = 'cookie-clicker.html';" id="myButton" class="game_button">Cookie Clicker</a>
 </div>
+<script>
+    function msg() {
+      alert('Hello World');   
+    }
+  </script>
 </body>
