--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       font-size: 30px;
       padding: 30px;
     }
+    
+    .DiscriptionUIHidden {
+      display: none;  
+    }
+    
     .game_button{
       background-color: #808080;
       border: none;
@@ -78,9 +83,11 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="New UI Test" id="myButton" class="game_button" onclick="msg()">                                                                                                                                                                           
+<input type="button" value="New UI Test - A" id="myButton" class="game_button" onclick="msg(thing To message)">                                                                                                                                                                           
 </div>  
-  
+
+<p id = "UITestDescription">Hello This is a little test of my new UI thing</p>
+ 
 <div class = button_div>
 <a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>                                                                                                                                                                                 
 </div>
@@ -109,8 +116,8 @@
 <a href = 'cookie-clicker.html';" id="myButton" class="game_button">Cookie Clicker</a>
 </div>
 <script>
-    function msg() {
-      alert('Hello World');   
+    function msg(WhatToMessage) {
+      alert(WhatToMessage);   
     }
   </script>
 </body>
