--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       padding: 30px;
     }
     
-    .DiscriptionUIHidden {
+    #DiscriptionUIHidden {
       display: none;  
     }
     
@@ -83,10 +83,10 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="New UI Test - A" id="myButton" class="game_button" onclick="ShowTestGameDescription()">                                                                                                                                                                           
+<input type="button" value="New UI Test" id="myButton" class="game_button" onclick="ShowTestGameDescription()">                                                                                                                                                                           
 </div>  
 
-<p id="DiscriptionUIHidden" class="TestGameDescription">Hello This is a little test of my new UI thing</p>
+<p id="DiscriptionUIHidden" class="TestGameDescription">Hello This is a little test of my new UI thing I hope you like it.</p>
  
 <div class = button_div>
 <a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>                                                                                                                                                                                 
