--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 </div>
 <script>
     function ShowTestGameDescription() {
+      alert('Clicked');
       let element = document.getElementsByClass('TestGameDescription');
       element.id = 'UITestDescription';
     }
