--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="New UI Test" id="myButton" class="game_button" onclick="ShowTestGameDescription()">                                                                                                                                                                           
+<input type="button" value="Test Game" id="myButton" class="game_button" onclick="ShowTestGameDescription()">                                                                                                                                                                           
 </div>  
 
 <div id="DiscriptionUIHidden" class="TestGameDescription">
