--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
 </div>  
 
 <div id="DiscriptionUIHidden" class="TestGameDescription">
-  <p>Hello This is a little test of my new UI thing I hope you like it.</p>
+  <p>Hello Welcome to the test game this is an amazing game.</p>
+  <p>This game is so amazing that I play it everyday.</p>
+  
+  <input type="button" value="Play Game" id="myButton" class="DescriptionButton">
+  <input type="button" value="Close" id="myButton" class="DescriptionButton">
 </div>
  
 <div class = button_div>
