--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
       display: none;  
     }
     
+    #TestGameUI {
+      background-color: #909090;
+      width: 95%;
+      border-radius: 15px;
+      font-size: 15px;
+      text-decoration: none;
+      float: center;
+      color: white;
+    }
+    
     .game_button{
       background-color: #808080;
       border: none;
