--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     }
                                                                    
     function CloseHitTheTargetDescription() {
-      document.getElementById('HitTheTargetUI').id = DescriptionUIHidden;                                                              
+      document.getElementById('HitTheTargetUI').id = 'DescriptionUIHidden';                                                              
     }
   </script>
 </body>
