--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       font-size: 15px;
       text-decoration: none;
       float: center;
-      color: white;
+      color: #606060;
       padding: 15px;
     }
     
@@ -97,9 +97,10 @@
 <input type="button" value="Hit The Target" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
 </div>  
 
-<div id="DiscriptionUIHidden" class="TestGameDescription">
-  <p>Hello Welcome to the test game this is an amazing game.</p>
+<div id="DiscriptionUIHidden">
+  <p>Hello Welcome to the test game this is an amazing game. <br />
   <p>This game is so amazing that I play it everyday.</p>
+  <p>This Game Was Made: Walmart Harrison(Logan)</p>
   
   <input type="button" value="Play Game" id="myButton" class="DescriptionButton">
   <input type="button" value="Close" id="myButton" class="DescriptionButton" onclick="CloseHitTheTargetDescription()">
