--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     }
                                                                    
     function CloseHitTheTargetDescription() {
-      document.getElementById('HitTheTargetUI').id = 'DescriptionUIHidden';                                                              
+      document.getElementById('HitTheTargetUI').id = 'DiscriptionUIHidden';                                                              
     }
   </script>
 </body>
