--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
       padding: 15px;
     }
     
+    #DescriptionButton {
+      background-color: #808080;
+      border: none;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      float: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 20px;
+      width: 5%;
+      border-radius: 15px;
+    }
+    
     .game_button{
       background-color: #808080;
       border: none;
@@ -98,8 +112,7 @@
 </div>  
 
 <div id="DiscriptionUIHidden">
-  <p>Hello Welcome to the test game this is an amazing game. <br />
-  <p>This game is so amazing that I play it everyday.</p>
+  <p>Welcome to Hit The Target. In Hit The Target You Test you reaction speed by hitting the moving target. If you hit the randomly generated blocks than it is game over</p>
   <p>This Game Was Made: Walmart Harrison(Logan)</p>
   
   <input type="button" value="Play Game" id="myButton" class="DescriptionButton">
